1/29 17:49 로그인, 게시판 페이지 / 게시판 작업중

--- a/src/main/resources/templates/newfoodfinder/home.html
+++ b/src/main/resources/templates/newfoodfinder/home.html
@@ -11,6 +11,9 @@
             <a th:href="@{/newfoodfinder/login}">
                 <button type="button" class="btn btn-outline-primary">Login</button>
             </a>
+            <a th:href="@{/newfoodfinder/list}">
+                <button type="button" class="btn btn-outline-primary">List</button>
+            </a>
         </span>
         <div class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
