--- a/src/main/resources/templates/newfoodfinder/uploadEx.html
+++ b/src/main/resources/templates/newfoodfinder/uploadEx.html
@@ -8,9 +8,9 @@
     <input name="uploadFiles" type="file" multiple>
     <button class="uploadBtn">Upload</button>
     <script
-            src="http://code.jquery.com/jqery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb60SsuzixeV4y/faTqgFtohetphbbj0="
-            crossrigin="anonymous"></script>
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
     <script>
         $('.uploadBtn').click(function(){
             var formData = new FormData();
@@ -20,6 +20,22 @@
                 console.log(files[i]);
                 formData.append("uploadFiles", files[i]);
             }
+
+            $.ajax({
+            url: '/uploadAjax',
+            processDate: false,
+            contentType: false,
+            data: formData,
+            type: 'POST',
+            dataType:'json',
+            success: function(result){
+                console.log(result)
+            },
+        `   error: function(jqXHR, textStatus, errorThrown){
+                console.log(textStatus);
+                }
+            });
         });
+
     </script>
 </body>
