--- a/src/main/resources/templates/newfoodfinder/home.html
+++ b/src/main/resources/templates/newfoodfinder/home.html
@@ -2,9 +2,15 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-
+    <div class="container">
+        <p>회원 기능</p>
+        <div>
+            <a href="/newmember">회원가입</a>
+            <a href="/members">회원목록</a>
+        </div>
+    </div>
 </body>
 </html>
