--- a/src/main/resources/templates/newfoodfinder/MemberForm.html
+++ b/src/main/resources/templates/newfoodfinder/MemberForm.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default}">
+<meta charset="UTF-8">
 
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
@@ -26,25 +27,53 @@
     </script>
 
 </th:block>
-
+<!--username
+userid
+password
+ssn
+mail
+phone
+nickname -->
 <div layout:fragment="content">
 
     <form action="/members/new" role="form" method="post"  th:object="${memberFormDto}">
         <div class="form-group py-2">
             <label th:for="name">이름</label>
-            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
-            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
+            <input type="text" th:field="*{username}" class="form-control" placeholder="이름을 입력해주세요">
+            <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group py-2">
+            <label th:for="name">주민등록번호</label>
+            <input type="number" th:field="*{ssn}" class="form-control" placeholder="주민등록번호를 입력해주세요">
+            <p th:if="${#fields.hasErrors('ssn')}" th:errors="*{ssn}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group py-2">
+            <label th:for="name">아이디</label>
+            <input type="text" th:field="*{userid}" class="form-control" placeholder="아이디를 입력해주세요">
+            <p th:if="${#fields.hasErrors('userid')}" th:errors="*{userid}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group py-2">
+            <label th:for="password">비밀번호</label>
+            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력해주세요">
+            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
+        </div>
+
+        <div class="form-group py-2">
+            <label th:for="name">닉네임</label>
+            <input type="text" th:field="*{nickname}" class="form-control" placeholder="닉네임을 입력해주세요">
+            <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group py-2">
+            <label th:for="name">휴대전화 번호</label>
+            <input type="number" th:field="*{phone}" class="form-control" placeholder="휴대전화 번호를 입력해주세요">
+            <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group py-2">
             <label th:for="email">이메일주소</label>
             <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요">
             <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
         </div>
-        <div class="form-group py-2">
-            <label th:for="password">비밀번호</label>
-            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호 입력">
-            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
-        </div>
+
         <div class="form-group py-2">
             <label th:for="address">주소</label>
             <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요">
