--- a/src/main/resources/templates/newfoodfinder/home.html
+++ b/src/main/resources/templates/newfoodfinder/home.html
@@ -2,15 +2,12 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>New Food Finder - Home</title>
 </head>
 <body>
     <div class="container">
-        <p>회원 기능</p>
-        <div>
-            <a href="/newmember">회원가입</a>
-            <a href="/members">회원목록</a>
-        </div>
+        <h2 class="mb-5">HOME</h2>
+        <a href="/foodboard">게시판 목록보기</a>
     </div>
 </body>
 </html>
