--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>로그인성공</title>
+    <title>New Food Finder - Home</title>
 </head>
 <body>
-<h1>로그인성공</h1>
-<p>로그인 성공</p>
-<a href="/member/text">회원 정보 확인하기</a>
-<a href="/member/login/logout">로그아웃</a>
+
 </body>
 </html>
