--- a/src/main/resources/templates/newfoodfinder/read.html
+++ b/src/main/resources/templates/newfoodfinder/read.html
@@ -5,7 +5,7 @@
         <h1 class="mt-4">New Food Finder Read Page</h1>
         <div class="form-group">
             <label >Listno</label>
-            <input type="text" class="form-control" name="listno" th:value="${dto.listno}" readonly>
+            <input type="text" class="form-control" name="headnum" th:value="${dto.headnum}" readonly>
         </div>
         <div class="form-group">
             <label >Title</label>
