--- a/src/main/resources/templates/newfoodfinder/register.html
+++ b/src/main/resources/templates/newfoodfinder/register.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
-<form method="post" action="/newmember">
-    <div class="container">
-        <h1>회원가입</h1>
-        <div class="form-group">
-            <label th:for="inputEmail4">아이디</label>
-            <input type="text" class="form-control" id="inputEmail4" name="userid" placeholder="사용자 아이디">
-        </div>
-        <div class="form-group">
-            <label th:for="inputPassword4">비밀번호</label>
-            <input type="password" class="form-control" id="inputPassword4" name="password" placeholder="사용자 비밀번호">
-        </div>
-        <div class="form-group">
-            <label th:for="inputAddress">이름</label>
-            <input type="text" class="form-control" id="inputAddress" name="name" placeholder="사용자 이름">
-        </div>
-        <button type="submit" class="btn btn-primary">가입 완료</button>
-    </div>
-</form>
-</body>
+<th:block th:replace="~{layout/basic :: setContent(~{this::content} )}">
+    <th:block th:fragment="content">
+        <h1 class="mt-4">GuestBook Register</h1>
+        <form th:action="@{/guestbook/register}" th:method="post">
+            <div class="form-group">
+                <label >Title</label>
+                <input type="text" class="from-control" name="title" placeholder="Enter Title">
+            </div>
+            <div class="form-group">
+                <label >Content</label>
+                <textarea class="form-control" rows="5" name="content"></textarea>
+            </div>
+            <div class="form-group">
+                <label >Writer</label>
+                <input type="text" class="form-control" name="writer" placeholder="Enter Writer">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </th:block>
+</th:block>
