--- a/src/main/resources/templates/newfoodfinder/foodboard.html
+++ b/src/main/resources/templates/newfoodfinder/foodboard.html
@@ -41,11 +41,10 @@
       <tbody>
       <tr th:each="dto : ${result.dtoList}" >
         <th scope="row">
-          <a th:href="@{/read(gno = ${dto.gno}, page= ${result.page}, type=${pageRequestDTO.type}, keyword=${pageRequestDTO.keyword})}">
-            [[${dto.gno}]]</a>
+          <a th:href="@{/read(headnum = ${dto.headnum}, page= ${result.page}, type=${pageRequestDTO.type}, keyword=${pageRequestDTO.keyword})}">
+            [[${dto.headnum}]]</a>
         </th>
         <td>[[${dto.title}]]</td>
-        <td>[[${dto.writer}]]</td>
         <td>[[${#temporals.format(dto.regDate, 'yyyy/MM/dd')}]]</td>
       </tr>
       </tbody>
