--- a/src/main/resources/templates/newfoodfinder/home.html
+++ b/src/main/resources/templates/newfoodfinder/home.html
@@ -5,7 +5,7 @@
     <title>New Food Finder - Home</title>
 </head>
 <body>
-    <div class="container">
+    <div>
         <h2 class="mb-5">HOME</h2>
         <a href="/foodboard">게시판 목록보기</a>
     </div>
